--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,31 +1,20 @@
-name: Node.js Package
-
+name: Publish
 on:
-  release:
-    types: [created]
-
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 16
-      - run: npm ci
-      - run: npm test
-
-  publish-gpr:
-    needs: build
+  publish:
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: "20.x"
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
       - run: npm publish
